--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!-- Menu -->
 <div class="navbar navbar-expand navbar-light fixed-top bg-white border-bottom shadow-sm">
   <div class="collapse navbar-collapse" id="menu">
-    <div class="navbar-nav">
+    <div class="navbar-nav align-items-center">
+      <div class="navbar-brand ml-3">
+        <img class="random-workhorse" src="assets/horse-0{{ randomWorkhorse }}.png" />
+      </div>
       <a
         [routerLink]="['/']"
         [routerLinkActiveOptions]="{ exact: true }"
@@ -15,9 +18,21 @@
       <a [routerLink]="['logs']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Logs</a>
       <a [routerLink]="['config']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Config</a>
     </div>
-  </div>
-  <div class="navbar-brand ml-3">
-    <img class="random-workhorse" src="assets/horse-0{{ randomWorkhorse }}.png" />
+
+    <div class="ml-auto d-flex">
+
+      <refresh-interval-selection></refresh-interval-selection>
+      <refresh-button [global]="true"> </refresh-button>
+
+      <button
+      class="btn d-inline-block status-btn ml-2"
+      [ngClass]="statusService.running ? 'btn-outline-secondary' : 'btn-primary'"
+      (click)="statusService.running ? statusService.stopWorkhorse() : statusService.startWorkhorse()">
+      <i class="ion" [ngClass]="statusService.running ? 'ion-md-square' : 'ion-ios-play'"></i
+      ><span class="ml-2">{{ statusService.running ? 'Stop' : 'Start' }}</span>
+    </button>
+    </div>
+
   </div>
 </div>
 
@@ -27,6 +42,6 @@
   <router-outlet></router-outlet>
   <div>
     <!-- corresponding workhorse version -->
-    <span class="version">Workhorse {{ workhorseVersion }} · {{ persistenceName }} {{ persistenceVersion }}</span>
+    <span class="version ml-2">Workhorse {{ workhorseVersion }} · {{ persistenceName }} {{ persistenceVersion }}</span>
   </div>
 </div>
