--- a/src/app/shared/components/threads/threads.component.html
+++ b/src/app/shared/components/threads/threads.component.html
@@ -1,6 +1,6 @@
-<div class="card mb-3">
+<div class="card mb-3 h-100">
   <div class="card-header d-flex justify-content-between p-3 d-inline-block">
-    <h4 class="d-inline-block">Running threads</h4>
+    <h5 class="d-inline-block">Running Threads</h5>
     <div class="action-buttons">
       <refresh-button class="refresh d-inline-block ml-2" (click)="getRunningThread()" [refreshing]="loading"> </refresh-button>
     </div>
