--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,9 +15,9 @@
   font-size: large;
 }
 
-.random-workhorse {
-  width: 60px;
-  height: 60px;
+.workhorse-logo {
+  width: 50px;
+  height: 50px;
   margin: -10px;
 }
 
